--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,7 +3,7 @@
 
     "builds":[
         {
-            "src":"api/index.js",
+            "src":"index.js",
             "use":"@vercel/node"
         }
     ],
@@ -11,7 +11,7 @@
     "routes":[
         {
             "src":"/(.*)",
-            "dest":"api/index.js"
+            "dest":"index.js"
         }
     ]
 }
