--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "docker:build": "cd docker && chmod +x build-images.sh && ./build-images.sh"
   },
   "dependencies": {
     "cors": "^2.8.5",
