--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,7 @@
     "cors": "^2.8.5",
     "dockerode": "^4.0.2",
     "express": "^4.18.2",
-    "uuid": "^9.0.1",
-    "dockerode": "^4.0.2"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
