--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "docker:build": "cd docker && chmod +x build-images.sh && ./build-images.sh"
   },
   "dependencies": {
+    "@codemirror/lang-cpp": "^6.0.3",
+    "@codemirror/lang-java": "^6.0.2",
+    "@codemirror/lang-python": "^6.2.1",
     "@hookform/resolvers": "^3.9.0",
     "@monaco-editor/react": "^4.6.0",
     "@next/swc-wasm-nodejs": "13.5.1",
@@ -42,6 +45,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@uiw/codemirror-theme-github": "^4.25.1",
+    "@uiw/react-codemirror": "^4.25.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.1",
     "concurrently": "^8.2.2",
